# autopkg

./: .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Makefile  Notes.txt  ReadMe.md  TODO.md  clean.sh  gh_actions_requirements.txt  index.html  install.sh  new_requirements.txt  params.json  pyproject.toml  python2_requirements.txt  python3_requirements.txt  python_universal_tester.sh  requirements.txt
.github/ISSUE_TEMPLATE/: beta-bug-report.md  bug_report.md
.github/workflows/: TestGitHubReleasesInfoProvider.yaml  build_main.yaml  flake8.yaml  linting.sh  linting.yaml  plistlint.yaml  pylint.yaml  requirements.txt  tests.yaml  update_processor_docs.yml  yamllint.yaml
Code/: auto  automunkiimport  autopkg  generate_processor_docs.py
Code/FoundationPlist/: FoundationPlist.py  __init__.py
Code/autopkgcli/: autopkg.py
Code/autopkgcmd/: __init__.py  opts.py  searchcmd.py
Code/autopkglib/: AbsoluteManageExport.py  AdiumURLProvider.py  AdobeFlashDmgUnpacker.py  AdobeFlashURLProvider.py  AdobeReaderDmgUnpacker.py  AdobeReaderURLProvider.py  AppDmgVersioner.py  AppInfo.py  AppPkgCreator.py  AppVersioner.py  BrewCaskInfoProvider.py  CURLDownloader.py  CURLTextSearcher.py  ChocolateyPackager.py  CodeSignatureVerifier.py  Copier.py  CyberduckURLProvider.py  DateTimeTagger.py  DeprecationWarning.py  DirectoryCreator.py  DmgCreator.py  DmgMounter.py  EndOfCheckPhase.py  EnvPrinter.py  FileCreator.py  FileFinder.py  FileMover.py  (+70 more)
Recipes/: Where_did_the_recipes_go.txt
Scripts/: autopkg.ps1  autopkg_release.py  bulk_repo_add.py  generate_processor_docs.py  install.sh  make_autopkg_python_pkg.sh  make_autopkg_release_pkg.sh  make_new_release.py  postinstall  regenerate_nuspec_ds.py  run_tests.py  setup_new_recipe_repo.py
Test/: com.googlecode.autopkg.plist
Tests/: test_versioner.py
autopkg/: autopkg.py
scripts/: bulk_repo_add.py  clean.sh  generate_processor_docs.py  run_tests.py
tests/: __init__.py  e2e_tests.sh  preferences.plist  test_autopkglib.py  test_chocolatey_generators.py  test_chocolatey_packager.py  test_copier.py  test_expand_repo.py  test_filecreator.py  test_filefinder.py  test_githubreleasesinfoprovider.py  test_pkgcopier.py  test_preferences.py  test_searchcmd.py  test_signtool.py  test_unarchiver.py  test_urltextsearcher.py  test_versioner.py
(+262 files in other folders)
